# bootcamp_data_engineering_aula_20

./: README.md  pyproject.toml
backend/: crud.py  database.py  main.py  models.py  router.py  schema.py
